--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
+
 				alert('1');
+				console.log('1');
+
 			});
 		</script>
 	</head>
